[gd_scene load_steps=13 format=2]

[ext_resource path="res://OnClick/onClick2/SpotDiffWorld2.gd" type="Script" id=1]
[ext_resource path="res://OnClick/images/STDImg5.png" type="Texture" id=2]
[ext_resource path="res://OnClick/images/STDImg5.1.png" type="Texture" id=3]
[ext_resource path="res://OnClick/onClick2/Diff1.gd" type="Script" id=4]
[ext_resource path="res://OnClick/images/red_circle.png" type="Texture" id=5]
[ext_resource path="res://OnClick/onClick2/Diff2.gd" type="Script" id=6]
[ext_resource path="res://OnClick/onClick2/Diff3.gd" type="Script" id=7]
[ext_resource path="res://OnClick/onClick2/Diff4.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.0
height = 80.0

[sub_resource type="CircleShape2D" id=3]
radius = 41.2311

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 30 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1030, 600 )
z_index = -10
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1030, 1820 )
z_index = -10
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 80, 840 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 80, 2070 )
shape = SubResource( 1 )

[node name="diff_1_a" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 80, 840 )
scale = Vector2( 0.371245, 0.585837 )
texture = ExtResource( 5 )

[node name="diff_1_b" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 80, 2070 )
scale = Vector2( 0.371245, 0.585837 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 1910, 2340 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 1910, 1120 )
shape = SubResource( 2 )

[node name="diff_2_a" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 1910, 1120 )
scale = Vector2( 0.328326, 0.614808 )
texture = ExtResource( 5 )

[node name="diff_2_b" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 1910, 2340 )
scale = Vector2( 0.328326, 0.628755 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 850, 730 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 850, 1950 )
shape = SubResource( 3 )

[node name="diff_3_a" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 850, 730 )
scale = Vector2( 0.328326, 0.328326 )
texture = ExtResource( 5 )

[node name="diff_3_b" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 850, 1950 )
scale = Vector2( 0.328326, 0.328326 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 1620, 1040 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 1630, 2270 )
shape = SubResource( 4 )

[node name="diff_4_a" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 1620, 1040 )
scale = Vector2( 0.542918, 0.285408 )
texture = ExtResource( 5 )

[node name="diff_4_b" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 1630, 2270 )
scale = Vector2( 0.528971, 0.285408 )
texture = ExtResource( 5 )

[node name="Area2D5" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]

[node name="Sprite" type="Sprite" parent="Area2D5"]

[node name="Area2D6" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]

[node name="Sprite" type="Sprite" parent="Area2D6"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1020, 1220 )
current = true
zoom = Vector2( 3.2, 6.65 )
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="Area2D" method="_on_diff_1_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="." method="_on_diff_1_a_visibility_changed"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D2_input_event"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="Area2D2" method="_on_diff_2_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="." method="_on_diff_2_a_visibility_changed"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D3_input_event"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="Area2D3" method="_on_diff_3_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="." method="_on_diff_3_a_visibility_changed"]
[connection signal="input_event" from="Area2D4" to="Area2D4" method="_on_Area2D4_input_event"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="Area2D4" method="_on_diff_4_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="." method="_on_diff_4_a_visibility_changed"]
